--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+body {
+    background-image: url(coffee.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+    background-position: center;
+    background-color: #3b8d99;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header,
+.container {
+    display: flex;
+    justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+    font-size: 60px;
+    background: linear-gradient(to left, #aa4b6b, #3b8d99);
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.inputField {
+    padding: 10px;
+    width: 40%;
+    border: none;
+    font-size: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+    padding: 20px;
+    background: #3b8d99;
+    border: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.taskContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.added {
+    background: #ae5f75;
+    list-style-type: none;
+    height: 60px;
+    width: 50%;
+    text-align: center;
+    color: white;
+    font-size: 20px;
+    border-bottom: 1px solid #cdc7be;
+}
+
+.completed {
+    background: #8fd9a8;
+    color: black;
+    font-weight: bold;
+    text-decoration: line-through;
+    transition: all 1s ease;
 }
